# linbra

./: Cargo.toml  README.md
.cargo/: config.toml
src/: colours.rs  lib.rs  matrices.rs  operations.rs  points.rs  sizes.rs  vectors.rs
src/matrix/: matrix.rs  mod.rs  operations.rs
src/vector/: mod.rs  operations.rs  vector.rs
tests/: colours.rs  conflicts.rs
